--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
+    "actioncable": "^5.2.6",
     "actioncable-js": "^5.0.0-rc2",
     "babel-loader": "^8.2.2",
     "react": "^17.0.1",
