--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,5 +6,5 @@ test:
 
 production:
   adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  url: <%= ENV.fetch("REDISTOGO_URL") { "redis://redistogo:16eb3a08b54ba3281a0678c7ccddd42e@crestfish.redistogo.com:10262/" } %>
   channel_prefix: scordid_production
